change logger from tmp to exact file

--- a/dagobah/daemon/templates/job_detail.html
+++ b/dagobah/daemon/templates/job_detail.html
@@ -25,7 +25,7 @@
         <span data-attr='success' data-transform='class-success'></span>
       </td>
       <td>
-        <button class='btn btn-primary' onclick="window.location.href = '{{ taskURL }}';">View Task</button>
+        <button class='btn btn-primary' onclick="window.location.href = '{{ taskURL }}';">Task Logs</button>
         <button class='btn btn-danger task-delete' onclick="return false;"><i class='icon-trash'></i>
       </td>
     </tr>
@@ -36,7 +36,7 @@
       {{> tasksName }}
       {{> tasksCommand }}
       <td>
-        <button class='btn btn-primary' onclick="window.location.href = '{{ taskURL }}';">View Task</button>
+        <button class='btn btn-primary' onclick="window.location.href = '{{ taskURL }}';">Task Logs</button>
         <button class='btn btn-danger task-delete' onclick="return false;"><i class='icon-trash'></i>
       </td>
     </tr>
@@ -48,7 +48,7 @@
       {{> tasksSoftTimeout }}
       {{> tasksHardTimeout }}
       <td>
-        <button class='btn btn-primary' onclick="window.location.href = '{{ taskURL }}';">View Task</button>
+        <button class='btn btn-primary' onclick="window.location.href = '{{ taskURL }}';">Task Logs</button>
         <button class='btn btn-danger task-delete' onclick="return false;"><i class='icon-trash'></i>
       </td>
     </tr>
@@ -59,7 +59,7 @@
       {{> tasksName }}
       {{> tasksRemoteTarget }}
       <td>
-        <button class='btn btn-primary' onclick="window.location.href = '{{ taskURL }}';">View Task</button>
+        <button class='btn btn-primary' onclick="window.location.href = '{{ taskURL }}';">Task Logs</button>
         <button class='btn btn-danger task-delete' onclick="return false;"><i class='icon-trash'></i>
       </td>
     </tr>
@@ -245,6 +245,12 @@
 
   <label>Command</label>
   <textarea id='new-task-command' rows="3" placeholder='Task Command'></textarea>
+
+  <label>Stdout</label>
+  <input id='new-task-stdout' class='input-xxlarge' type='text' placeholder='Task Stdout'></input>
+
+  <label>Stderr ( can be none and use Stdout as default ) </label>
+  <input id='new-task-stderr' class='input-xxlarge' type='text' placeholder='Task Stderr'></input>
 
   <br />
   <button id='add-task' class='btn btn-success' onclick='return false;'>Add Task</button>
